--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 
   #detalle-seleccion h3 { margin-top: 0; }
 
-  #detalle-content { text-align: justify; }
+  #detalle-content {
+    text-align: justify;
+    font-size: 20px;   /* tamaño ligeramente mayor que por defecto */
+    line-height: 1.6;  /* más espaciado entre líneas */
+}
 
   #detalle-content img {
     float: left;
